change message id from integer resource id to final static variable, change item type from int to string